docs/api/qiskit/0.19/qiskit.providers.aer.extensions.Snapshot.mdx
---
title: Snapshot (v0.19)
description: API reference for qiskit.providers.aer.extensions.Snapshot in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.aer.extensions.Snapshot
---

# Snapshot

<Class id="qiskit.providers.aer.extensions.Snapshot" isDedicatedPage={true} github="https://github.com/qiskit/qiskit-aer/tree/stable/0.5/qiskit/providers/aer/extensions/snapshot.py" signature="Snapshot(label, snapshot_type='statevector', num_qubits=0, num_clbits=0, params=None)" modifiers="class">
  Simulator snapshot instruction.

  Create new snapshot instruction.

  **Parameters**

  *   **label** (*str*) – the snapshot label for result data.
  *   **snapshot\_type** (*str*) – the type of the snapshot.
  *   **num\_qubits** (*int*) – the number of qubits for the snapshot type \[Default: 0].
  *   **num\_clbits** (*int*) – the number of classical bits for the snapshot type \[Default: 0].
  *   **params** (*list or None*) – the parameters for snapshot\_type \[Default: None].

  **Raises**

  **ExtensionError** – if snapshot label is invalid.

  ## Attributes

  <span id="snapshot-decompositions" />

  ### decompositions

  <Attribute id="qiskit.providers.aer.extensions.Snapshot.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  <span id="snapshot-definition" />

  ### definition

  <Attribute id="qiskit.providers.aer.extensions.Snapshot.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  <span id="snapshot-label" />

  ### label

  <Attribute id="qiskit.providers.aer.extensions.Snapshot.label">
    Return snapshot label
  </Attribute>

  <span id="snapshot-params" />

  ### params

  <Attribute id="qiskit.providers.aer.extensions.Snapshot.params">
    return instruction params.
  </Attribute>

  <span id="snapshot-snapshot-type" />

  ### snapshot\_type

  <Attribute id="qiskit.providers.aer.extensions.Snapshot.snapshot_type">
    Return snapshot type
  </Attribute>

  ## Methods

  <span id="snapshot-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.providers.aer.extensions.Snapshot.add_decomposition" signature="Snapshot.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="snapshot-assemble" />

  ### assemble

  <Function id="qiskit.providers.aer.extensions.Snapshot.assemble" signature="Snapshot.assemble()">
    Assemble a QasmQobjInstruction
  </Function>

  <span id="snapshot-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.providers.aer.extensions.Snapshot.broadcast_arguments" signature="Snapshot.broadcast_arguments(qargs, cargs)">
    Validation of the arguments.

    **Parameters**

    *   **qargs** (*List*) – List of quantum bit arguments.
    *   **cargs** (*List*) – List of classical bit arguments.

    **Yields**

    *Tuple(List, List)* – A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="snapshot-c-if" />

  ### c\_if

  <Function id="qiskit.providers.aer.extensions.Snapshot.c_if" signature="Snapshot.c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  <span id="snapshot-copy" />

  ### copy

  <Function id="qiskit.providers.aer.extensions.Snapshot.copy" signature="Snapshot.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="snapshot-define-snapshot-register" />

  ### define\_snapshot\_register

  <Function id="qiskit.providers.aer.extensions.Snapshot.define_snapshot_register" signature="Snapshot.define_snapshot_register(circuit, label, qubits=None)" modifiers="static">
    Defines qubits to snapshot for all snapshot methods
  </Function>

  <span id="snapshot-inverse" />

  ### inverse

  <Function id="qiskit.providers.aer.extensions.Snapshot.inverse" signature="Snapshot.inverse()">
    Special case. Return self.
  </Function>

  <span id="snapshot-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.providers.aer.extensions.Snapshot.is_parameterized" signature="Snapshot.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="snapshot-mirror" />

  ### mirror

  <Function id="qiskit.providers.aer.extensions.Snapshot.mirror" signature="Snapshot.mirror()">
    For a composite instruction, reverse the order of sub-gates.

    This is done by recursively mirroring all sub-instructions. It does not invert any gate.

    **Returns**

    a fresh gate with sub-gates reversed

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="snapshot-qasm" />

  ### qasm

  <Function id="qiskit.providers.aer.extensions.Snapshot.qasm" signature="Snapshot.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="snapshot-repeat" />

  ### repeat

  <Function id="qiskit.providers.aer.extensions.Snapshot.repeat" signature="Snapshot.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>
</Class>

